[workspace]
members = ["code/*"]
resolver = "2"
[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["bmbp<rs_bmbp.163.com>"]
description="Report Engine"
license="MIT"
readme = "README.md"
homepage="https://github.com/bmbper/bmbp_report"
repository="https://github.com/bmbper/bmbp_report"
documentation="https://github.com/bmbper/bmbp_report"
[workspace.dependencies]
